home carousel fullscreen on mobile and fixed captions size

--- a/resources/sass/_home.scss
+++ b/resources/sass/_home.scss
@@ -7,13 +7,19 @@ body{
     max-height: 100vh;
     overflow: hidden;
     .carousel-item{
-        max-height: 100vh;
+        height: 100vh;
         img{
             object-position: center;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
         }
         .carousel-caption{
             h1{
                 color: $primary;
+                @media (max-width: 576px) {
+                    font-size: 33px;
+                }
             }
             p{
                 color: white;
